tests/invalid_inputs/sema/fo_ret_diff_const_ptr.cpp


int * foo();
const int * foo();
